# larpnlearn

./: .gitignore  README.md  TIMELINE.md  aristotle_srs.md  docker-compose.yml  package-lock.json
backend/: .env.example  Dockerfile  pyproject.toml  render.yaml
backend/app/: config.py  enums.py  main.py  mock_data.py  models.py
backend/app/ai/: battle_agent.py  claude.py  evaluator.py  skills_agent.py  validation_agent.py  whisper.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  battles.py  courses.py  progress.py  skills.py  world.py
backend/app/db/: session.py  tables.py
backend/app/game/: damage.py  points.py
backend/app/rag/: chroma.py  documents.py  retrieval.py
backend/app/services/: battle_service.py  ingestion_service.py  progress_service.py
backend/scripts/: ingest_cs188.py
backend/tests/: test_health.py  test_ingestion.py  test_retrieval.py
cs188/: PROCESS.md  chunk_slides.py  course.json  schedule.json  syllabus.md
cs188/lectures/: lec_01.json  lec_02.json  lec_03.json  lec_04.json  lec_05.json  lec_06.json  lec_07.json  lec_08.json  lec_09.json  lec_10.json  lec_11.json  lec_12.json  lec_13.json  lec_14.json  lec_15.json  lec_16.json  lec_17.json  lec_18.json  lec_19.json  lec_20.json  lec_21.json  lec_22.json  lec_23.json  lec_24.json
demo_course/: README.md  manifest.json  question_bank.json  schedule.json  skills_graph.json
frontend/: .env.example  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: api.ts  audio.ts  theme.ts  (+3 more)
(+30 files in other folders)
